swagger doc and controller fixes
